minor grammatical changes

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="css/style.css">
         <link rel="shortcut icon" type="image/png" href="img/favicon.png">
         
-        <title>trillo &mdash; Your all-in-one booking app</title>
+        <title>uBook &mdash; Your all-in-one booking app</title>
     </head>
     <body>
         <div class="container">
@@ -29,17 +29,17 @@
                         <svg class="user-nav__icon">
                             <use xlink:href="img/sprite.svg#icon-bookmark"></use>
                         </svg>
-                        <span class="user-nav__notification">7</span>
+                        <span class="user-nav__notification">5</span>
                     </div>
                     <div class="user-nav__icon-box">
                         <svg class="user-nav__icon">
                             <use xlink:href="img/sprite.svg#icon-chat"></use>
                         </svg>
-                        <span class="user-nav__notification">13</span>
+                        <span class="user-nav__notification">11</span>
                     </div>
                     <div class="user-nav__user">
                         <img src="img/user.jpg" alt="User photo" class="user-nav__user-photo">
-                        <span class="user-nav__user-name">Jonas</span>
+                        <span class="user-nav__user-name">Oleksandr</span>
                     </div>
                 </nav>
             </header>
@@ -83,7 +83,7 @@
                     </ul>
 
                     <div class="legal">
-                        &copy; 2017 by trillo. All rights reserved.
+                        &copy; 2020 by uBook.<br>All rights reserved.
                     </div>
                 </nav>
 
@@ -104,7 +104,7 @@
 
                     <div class="overview">
                         <h1 class="overview__heading">
-                            Hotel Las Palmas
+                            Yekta Atrium
                         </h1>
 
                         <div class="overview__stars">
@@ -129,12 +129,12 @@
                             <svg class="overview__icon-location">
                                 <use xlink:href="img/sprite.svg#icon-location-pin"></use>
                             </svg>
-                            <button class="btn-inline">Albufeira, Portugal</button>
+                            <button class="btn-inline">Alanya, Turkey</button>
                         </div>
 
                         <div class="overview__rating">
-                            <div class="overview__rating-average">8.6</div>
-                            <div class="overview__rating-count">429 votes</div>
+                            <div class="overview__rating-average">8.4</div>
+                            <div class="overview__rating-count">177 votes</div>
                         </div>
                     </div>
 
@@ -147,8 +147,8 @@
                                 Accusantium cumque, quas, ut corporis incidunt deserunt quae architecto voluptate delectus, inventore iure aliquid aliquam.
                             </p>
                             <ul class="list">
+                                <li class="list__item">All inclusive</li>
                                 <li class="list__item">Close to the beach</li>
-                                <li class="list__item">Breakfast included</li>
                                 <li class="list__item">Free airport shuttle</li>
                                 <li class="list__item">Free wifi in all rooms</li>
                                 <li class="list__item">Air conditioning and heating</li>
@@ -158,7 +158,7 @@
                             </ul>
                             <div class="recommend">
                                 <p class="recommend__count">
-                                    Lucy and 3 other friends recommend this hotel.
+                                    John and 3 other friends recommend this hotel.
                                 </p>
                                 <div class="recommend__friends">
                                     <img src="img/user-3.jpg" alt="Friend 1" class="recommend__photo">
@@ -177,10 +177,10 @@
                                 <figcaption class="review__user">
                                     <img src="img/user-1.jpg" alt="User 1" class="review__photo">
                                     <div class="review__user-box">
-                                        <p class="review__user-name">Nick Smith</p>
-                                        <p class="review__user-date">Feb 23rd, 2017</p>
+                                        <p class="review__user-name">John Doe</p>
+                                        <p class="review__user-date">Oct 3rd, 2019</p>
                                     </div>
-                                    <div class="review__rating">7.8</div>
+                                    <div class="review__rating">8.2</div>
                                 </figcaption>
                             </figure>
 
@@ -191,8 +191,8 @@
                                 <figcaption class="review__user">
                                     <img src="img/user-2.jpg" alt="User 1" class="review__photo">
                                     <div class="review__user-box">
-                                        <p class="review__user-name">Mary Thomas</p>
-                                        <p class="review__user-date">Sept 13th, 2017</p>
+                                        <p class="review__user-name">Ann Smith</p>
+                                        <p class="review__user-date">Mar 13th, 2020</p>
                                     </div>
                                     <div class="review__rating">9.3</div>
                                 </figcaption>
@@ -207,11 +207,11 @@
 
                     <div class="cta">
                         <h2 class="cta__book-now">
-                            Good news! We have 4 free rooms for your selected dates!
+                            Hurry up! We have one last room for your selected dates!
                         </h2>
                         <button class="btn">
                             <div class="btn__visible">Book now</div>
-                            <div class="btn__invisible">Only 4 rooms left</div>
+                            <div class="btn__invisible">Only 1 room left</div>
                         </button>
                     </div>
 
